# bonelab-mod-repo

./: .env-example  .gitignore  LICENSE.md  README.md  entrypoint.sh  index.html  pyproject.toml  schema.prisma  staticbuild.sh
modio_repo/: __main__.py  models.py  slz_json.py  slz_repositoryfile.py  utils.py
modio_repo/downloader/: __init__.py  mod_files.py  pallets.py
templates/: _base.jinja2  credits.html  errors.html  index.html  mod-layout.html
templates/install/: devmode.html  index.html  old.html  pc-manual.html  quest-android-sideload.html  quest-manual.html
